Removed Message Detail

--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -9,3 +9,10 @@
 "Tweak.Title.LoginAnotherAccount" = "Login new account";
 "Tweak.Title.Group" = "Group";
 "Tweak.Message.CatchARecalledMessage" = "[Catched]\n%@";
+"Tweak.Message.Recalled" = "recalled";
+"Tweak.Message.Photo" = "Photo";
+"Tweak.Message.Voice" = "Voice";
+"Tweak.Message.Video" = "Video";
+"Tweak.Message.Sticker" = "Sticker";
+"Tweak.Message.Link" = "Link";
+"Tweak.Message.AMessage" = "a message";
