--- a/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
@@ -9,3 +9,10 @@
 "Tweak.Title.LoginAnotherAccount" = "登录新的账号";
 "Tweak.Title.Group" = "群组";
 "Tweak.Message.CatchARecalledMessage" = "[已拦截]\n%@";
+"Tweak.Message.Recalled" = "撤回了";
+"Tweak.Message.Photo" = "图片";
+"Tweak.Message.Voice" = "语音";
+"Tweak.Message.Video" = "视频";
+"Tweak.Message.Sticker" = "表情";
+"Tweak.Message.Link" = "链接";
+"Tweak.Message.AMessage" = "一条消息";
