--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "Tweak.Title.Group" = "Group";
 "Tweak.Message.CatchARecalledMessage" = "[Catched]\n%@";
 "Tweak.Message.Recalled" = "recalled";
-"Tweak.Message.Photo" = "Photo";
+"Tweak.Message.Image" = "Image";
 "Tweak.Message.Voice" = "Voice";
 "Tweak.Message.Video" = "Video";
 "Tweak.Message.Sticker" = "Sticker";
