--- a/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 "Tweak.Title.LoginAnotherAccount" = "登录新的账号";
 "Tweak.Title.Group" = "群组";
-"Tweak.Message.CatchARecalledMessage" = "[已拦截]\n%@";
+"Tweak.Message.InterceptedARecalledMessage" = "[已拦截一条撤回消息]\n%@";
 "Tweak.Message.Recalled" = "撤回了";
 "Tweak.Message.Image" = "图片";
 "Tweak.Message.Voice" = "语音";
