App url message menu add some items

--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -16,3 +16,5 @@
 "Tweak.Message.Sticker" = "Sticker";
 "Tweak.Message.Link" = "Link";
 "Tweak.Message.AMessage" = "a message";
+"Tweak.MessageMenuItem.CopyLink" = "Copy Link";
+"Tweak.MessageMenuItem.OpenInBrowser" = "Open In Browser";
