Image Message Menu Add Identify QRCode

--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -18,3 +18,4 @@
 "Tweak.Message.AMessage" = "a message";
 "Tweak.MessageMenuItem.CopyLink" = "Copy Link";
 "Tweak.MessageMenuItem.OpenInBrowser" = "Open In Browser";
+"Tweak.MessageMenuItem.IdentifyQRCode" = "Identify QRCode";
