--- a/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
@@ -18,3 +18,4 @@
 "Tweak.Message.AMessage" = "一条消息";
 "Tweak.MessageMenuItem.CopyLink" = "複製鏈接";
 "Tweak.MessageMenuItem.OpenInBrowser" = "使用瀏覽器打開";
+"Tweak.MessageMenuItem.IdentifyQRCode" = "識別QRCode";
