Image Message Identify QRCode Notification

--- a/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hans.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "Tweak.MessageMenuItem.CopyLink" = "复制链接";
 "Tweak.MessageMenuItem.OpenInBrowser" = "使用浏览器打开";
 "Tweak.MessageMenuItem.IdentifyQRCode" = "识别二维码";
+"Tweak.MessageMenuItem.IdentifyQRCodeNotification" = "识别结果已复制到粘贴板";
