--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "Tweak.MessageMenuItem.CopyLink" = "Copy Link";
 "Tweak.MessageMenuItem.OpenInBrowser" = "Open In Browser";
 "Tweak.MessageMenuItem.IdentifyQRCode" = "Identify QRCode";
+"Tweak.MessageMenuItem.IdentifyQRCodeNotification" = "The result of the recognition has been copied to the pasteboard";
