--- a/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
@@ -19,3 +19,4 @@
 "Tweak.MessageMenuItem.CopyLink" = "複製鏈接";
 "Tweak.MessageMenuItem.OpenInBrowser" = "使用瀏覽器打開";
 "Tweak.MessageMenuItem.IdentifyQRCode" = "識別QRCode";
+"Tweak.MessageMenuItem.IdentifyQRCodeNotification" = "識別結果已復製到粘貼板";
