Add custom revoked message style support
Make revoked message mask style experimental

--- a/WeChatTweak.framework/Versions/A/Resources/zh-Hans.lproj/TweakPreferencesController.strings
+++ b/WeChatTweak.framework/Versions/A/Resources/zh-Hans.lproj/TweakPreferencesController.strings
@@ -31,3 +31,8 @@
 
 /* Class = "NSTextFieldCell"; title = "Alfred JSON compressing:"; ObjectID = "jHw-2a-B2t"; */
 "jHw-2a-B2t.title" = "Alfred JSON 压缩：";
+
+"7wK-v5-BgQ.title" = "消息撤回样式：";
+"wRC-UO-k1G.title" = "经典";
+"gH0-wV-Bx0.title" = "遮罩";
+"ftV-1F-OnB.title" = "试验性功能"
