--- a/WeChatTweak/Controller/en.lproj/TweakPreferencesController.strings
+++ b/WeChatTweak/Controller/en.lproj/TweakPreferencesController.strings
@@ -31,3 +31,8 @@
 
 /* Class = "NSTextFieldCell"; title = "Alfred JSON compressing:"; ObjectID = "jHw-2a-B2t"; */
 "jHw-2a-B2t.title" = "Alfred JSON compressing:";
+
+"7wK-v5-BgQ.title" = "Revoked message style:";
+"wRC-UO-k1G.title" = "Classic";
+"gH0-wV-Bx0.title" = "Mask";
+"ftV-1F-OnB.title" = "Experimental feature"
