Minor issue fixes
1. Wrong method called
2. Localization

--- a/WeChatTweak.framework/Versions/A/Resources/en.lproj/TweakPreferencesController.strings
+++ b/WeChatTweak.framework/Versions/A/Resources/en.lproj/TweakPreferencesController.strings
@@ -26,13 +26,20 @@
 /* Class = "NSMenuItem"; title = "All"; ObjectID = "da4-aJ-lEy"; */
 "da4-aJ-lEy.title" = "All";
 
+/* Class = "NSMenuItem"; title = "Mask"; ObjectID = "gH0-wV-Bx0"; */
+"gH0-wV-Bx0.title" = "Mask";
+
 /* Class = "NSMenuItem"; title = "Inherited"; ObjectID = "gec-CY-E1x"; */
 "gec-CY-E1x.title" = "Inherited";
 
 /* Class = "NSTextFieldCell"; title = "Alfred JSON compressing:"; ObjectID = "jHw-2a-B2t"; */
 "jHw-2a-B2t.title" = "Alfred JSON compressing:";
 
-"7wK-v5-BgQ.title" = "Revoked message style:";
+/* Class = "NSTextFieldCell"; title = "Experimental feature"; ObjectID = "lHs-du-a6F"; */
+"lHs-du-a6F.title" = "Experimental feature";
+
+/* Class = "NSTextFieldCell"; title = "Revoked message style:"; ObjectID = "mPT-nA-idf"; */
+"mPT-nA-idf.title" = "Revoked message style:";
+
+/* Class = "NSMenuItem"; title = "Classic"; ObjectID = "wRC-UO-k1G"; */
 "wRC-UO-k1G.title" = "Classic";
-"gH0-wV-Bx0.title" = "Mask";
-"ftV-1F-OnB.title" = "Experimental feature"
