--- a/WeChatTweak.framework/Versions/A/Resources/zh-Hans.lproj/TweakPreferencesController.strings
+++ b/WeChatTweak.framework/Versions/A/Resources/zh-Hans.lproj/TweakPreferencesController.strings
@@ -26,13 +26,20 @@
 /* Class = "NSMenuItem"; title = "All"; ObjectID = "da4-aJ-lEy"; */
 "da4-aJ-lEy.title" = "全部接收";
 
+/* Class = "NSMenuItem"; title = "Mask"; ObjectID = "gH0-wV-Bx0"; */
+"gH0-wV-Bx0.title" = "遮罩";
+
 /* Class = "NSMenuItem"; title = "Inherited"; ObjectID = "gec-CY-E1x"; */
 "gec-CY-E1x.title" = "跟随聊天设置";
 
 /* Class = "NSTextFieldCell"; title = "Alfred JSON compressing:"; ObjectID = "jHw-2a-B2t"; */
-"jHw-2a-B2t.title" = "Alfred JSON 压缩：";
+"jHw-2a-B2t.title" = "Alfred JSON 压缩：;
 
-"7wK-v5-BgQ.title" = "消息撤回样式：";
+/* Class = "NSTextFieldCell"; title = "Experimental feature"; ObjectID = "lHs-du-a6F"; */
+"lHs-du-a6F.title" = "试验性功能";
+
+/* Class = "NSTextFieldCell"; title = "Revoked message style:"; ObjectID = "mPT-nA-idf"; */
+"mPT-nA-idf.title" = "消息撤回样式：";
+
+/* Class = "NSMenuItem"; title = "Classic"; ObjectID = "wRC-UO-k1G"; */
 "wRC-UO-k1G.title" = "经典";
-"gH0-wV-Bx0.title" = "遮罩";
-"ftV-1F-OnB.title" = "试验性功能"
