--- a/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/zh-Hant.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "Tweak.MessageMenuItem.IdentifyQRCode" = "識別QRCode";
 "Tweak.MessageMenuItem.IdentifyQRCodeNotification" = "識別結果已復製到粘貼板";
 "Tweak.MessageMenuItem.ExportSticker" = "導出貼圖";
+"Tweak.MessageMenuItem.OpenInGoogleMaps" = "使用谷歌地圖打開";
+"Tweak.MessageMenuItem.OpenInAmap" = "使用高德地圖打開";
