--- a/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
+++ b/WeChatTweak/Supporting Files/en.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "Tweak.MessageMenuItem.IdentifyQRCode" = "Identify QRCode";
 "Tweak.MessageMenuItem.IdentifyQRCodeNotification" = "The result of the recognition has been copied to the pasteboard";
 "Tweak.MessageMenuItem.ExportSticker" = "Export Sticker";
+"Tweak.MessageMenuItem.OpenInGoogleMaps" = "Open in Google Maps";
+"Tweak.MessageMenuItem.OpenInAmap" = "Open in Amap";
